Add custom tags to Docker build
Added custom tags 'latest' and the current commit SHA to the Docker image in the Github Actions workflow. This allows for better version tracking and easier identification of the image in the repository.

--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -32,6 +32,10 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/rubenvitt/${{ env.IMAGE_NAME }}
+          tags: |
+            latest
+            ${{ github.sha }}
+            
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
