Add README and update docker compose file
Added a new README file outlining instructions for using `readwise-to-mem.ai` exporter. This also includes configuring `Notion` and `mem.ai` integration and running instructions. Additionally, updated the docker compose file to use the latest image version from the repository. These changes are made to improve documentation clarity and use the most recent image for the exporter.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
-    image: imagename/express
+    image: ghcr.io/rubenvitt/readwise-notion-to-mem:latest
     environment:
       - NOTION_TOKEN=${NOTION_TOKEN}
       - MEM_TOKEN=${MEM_TOKEN}
