Refactor cron schedule setup in app.js
The cron schedule setup in app.js was redundant and made the code messy. Removed the redundant cron schedule function and created a variable cronSchedule for cleaner use throughout the code. This simplifies code reading and reduces likelihood of errors in future changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   app:
     build: .
+    entrypoint:
+      - pnpm start
     image: ghcr.io/rubenvitt/readwise-notion-to-mem:latest
     environment:
       - NOTION_TOKEN=${NOTION_TOKEN}
