Add "restart: unless-stopped" policy to docker-compose
The application service in docker-compose.yml file has been modified to include the "restart: unless-stopped" policy. This ensures that the application service will always restart unless the user manually stops it, thus improving the app's reliability during runtime.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
+    restart: unless-stopped
     image: ghcr.io/rubenvitt/readwise-notion-to-mem:latest
     environment:
       - NOTION_TOKEN=${NOTION_TOKEN}
