--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test-app.js",
     "lint": "eslint . --ext .js",
     "format": "prettier --write ."
   },
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@mem-labs/mem-node": "^0.1.1",
-    "@notionhq/client": "^2.2.7",
+    "@notionhq/client": "^2.2.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-cron": "^3.0.2"
